<?xml version="1.0"?>
<package>
  <name>openrave_RRTplugin</name>
  <version>1.0.1</version>
  <description>Utilities for building OpenRAVE plugins in a Catkin workspace.</description>
  <maintainer email="ruanmiao@umich.edu">Mengyao Ruan</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <url type="repository">https://github.com/UM-ARM-Lab/openrave_RRTplugin</url>
  <url type="bugtracker">https://github.com/UM-ARM-Lab/openrave_RRTplugin/issues</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave</build_depend>
  <run_depend>openrave</run_depend>
</package>
