<?xml version="1.0"?>
<package>
  <name>openrave_rrtplugin</name>
  <version>0.0.0</version>
  <description>Utilities for building OpenRAVE plugins in a Catkin workspace.</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dmcconac@todo.todo">dmcconac</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>victor_hardware_interface</build_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>victor_hardware_interface</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
